src/tools/rustfmt/tests/target/issue_5668.rs
type Foo = impl Send;
struct Struct<
    const C: usize = {
        let _: Foo = ();
        //~^ ERROR: mismatched types
        0
    },
>;
